--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,8 @@ body {
     padding-bottom: 20px;
 }
 
-.tentang, .kontak {
+.tentang,
+.kontak {
     background-color: #12a0dd46;
     box-shadow: 0px 0px 22px 0px rgba(0, 170, 255, 0.5);
     padding: 10px;
@@ -80,7 +81,8 @@ body {
 }
 
 .content img {
-    box-shadow: 0px 0px 22px 0px rgba(29, 37, 41, 0.8) -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    box-shadow: 0px 0px 22px 0px rgba(29, 37, 41, 0.8);
+    -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
     clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
 }
 
@@ -126,7 +128,10 @@ body {
     margin: auto;
 }
 
-.content-kontak label, .content-kontak input, .content-kontak textarea, .content-kontak button {
+.content-kontak label,
+.content-kontak input,
+.content-kontak textarea,
+.content-kontak button {
     display: block;
     /* background-color: brown; */
     width: 100%;
@@ -135,7 +140,7 @@ body {
 }
 
 .content-kontak button {
-    background-color: rgb(60, 185, 223);    
+    background-color: rgb(60, 185, 223);
     margin-top: 10px;
     border-radius: 5px;
     padding: 6px;
@@ -149,7 +154,7 @@ body {
 footer {
     width: 100%;
     height: 60px;
-    background-color:#171e20;
+    background-color: #171e20;
     padding: 10px;
 }
 
@@ -159,7 +164,7 @@ footer ul {
     height: 40px;
     margin: auto;
     display: flex;
-    justify-content: space-around;    
+    justify-content: space-around;
 }
 
 footer img {
