--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ body {
     box-shadow: 0px 0px 22px 0px rgba(29, 37, 41, 0.8);
     -webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
     clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    z-index: -9;
 }
 
 .content p {
@@ -155,7 +156,7 @@ footer {
     width: 100%;
     height: 60px;
     background-color: #171e20;
-    padding: 10px;
+    padding: 15px 0;
 }
 
 footer ul {
