--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,6 @@ body {
     margin-top: 10px;
     border-radius: 5px;
     padding: 6px;
-    width: 60px;
 }
 
 .content-kontak button:hover {
@@ -170,6 +169,10 @@ footer ul {
 
 footer img {
     width: 30px;
+}
+
+footer img:hover {
+    animation: linear;
 }
 
 footer p {
