--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ body {
     background-color: #12a0dd46;
     box-shadow: 0px 0px 22px 0px rgba(0, 170, 255, 0.5);
     padding: 10px;
+    border-radius: 10px;
 }
 
 .content {
@@ -116,8 +117,9 @@ body {
 .content-porto {
     list-style: none;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 200px));
     gap: 10px;
+    justify-content: center;
 }
 
 .portofolio {
@@ -134,16 +136,15 @@ body {
 .content-kontak textarea,
 .content-kontak button {
     display: block;
-    /* background-color: brown; */
     width: 100%;
     padding: 3px 0;
     border: none;
+    border-radius: 5px;
 }
 
 .content-kontak button {
     background-color: rgb(60, 185, 223);
-    margin-top: 10px;
-    border-radius: 5px;
+    margin-top: 10px;    
     padding: 6px;
 }
 
@@ -153,7 +154,7 @@ body {
 
 footer {
     width: 100%;
-    height: 60px;
+    height: 85px;
     background-color: #171e20;
     padding: 15px 0;
 }
@@ -169,13 +170,15 @@ footer ul {
 
 footer img {
     width: 30px;
+    transition: .2s;
 }
 
 footer img:hover {
-    animation: linear;
+    transform: scale(1.2);
 }
 
 footer p {
     text-align: center;
     color: whitesmoke;
+    padding-top: 20px;
 }
