--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,12 @@ body {
     box-shadow: 0px 0px 22px 0px rgba(21, 32, 37, 0.8)
 }
 
-.logo a {
-    text-decoration: none;
-    font-weight: bold;
-    color: whitesmoke;
+.logo {
     padding-left: 20px;
+}
+
+.logo img {        
+    width: 30px;
 }
 
 .menu a {
