--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,15 @@ body {
     font-weight: bold;
 }
 
+.pengalaman p {
+    display: inline;    
+    line-height: 1.4rem;
+}
+
+.pengalaman .bg {
+    background-color: #12a0dd73;
+}
+
 .judul {
     text-align: center;
     padding-top: 10px;
@@ -129,11 +138,11 @@ body {
 }
 
 .portofolio {
-    padding: 30px 0;
+    margin: 30px 0;
 }
 
 .portofolio ul {
-    padding-top: 20px;
+    margin-top: 20px;
 }
 
 .portofolio img {
@@ -212,4 +221,64 @@ footer p {
     text-align: center;
     color: whitesmoke;
     padding-top: 20px;
+}
+
+/* responsive */
+@media screen and (max-width: 1228px) {
+    .content {
+        position: relative;
+        /* background-color:teal; */
+        overflow: hidden;
+        border-radius: 10px;
+    }
+
+    .content img {
+        position: absolute;
+        /* box-shadow: 0px 0px 22px 0px rgba(29, 37, 41, 0.8); */
+
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+
+        z-index: -1;
+        margin-right: 0;
+        width: 100%;
+        top: -199px;
+        opacity: .4;
+        filter: blur(5px);
+    }
+
+    .tentang p {
+        text-align: justify;
+        line-height: 1.5rem;
+    }
+
+    .about {
+        margin-bottom: 20px;
+    }
+
+    .pengalaman {
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-areas: "kiri kanan";
+        gap: 10px;
+    }
+
+    .tahun {
+        grid-column-start: 1;
+        align-self: center;
+        justify-self: end;
+    }
+
+    .ket {
+        grid-column-start: 2;
+    }
+
+    .pengalaman p {
+        text-align: left;
+    }
+
+    .tentang {
+        position: relative;
+    }
+
 }
